<resources>
    <string name="app_name">Swift</string>
    <string name="textview">TextView</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="loginButton">LoginButton</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="stopwatchTimer">StopwatchTimer</string>
    <string name="_00_00_000">00:00:000</string>
    <string name="distanceText">Distance:</string>
    <string name="SaveTime">Save Time</string>
    <string name="title_activity_store_time">storeTimeActivity</string>
    <string name="time_Text">timeText</string>
    <string name="distance_Text">distanceText</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_background_worker">BackgroundWorker</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_stopwatch">Stopwatch</string>
    <string name="ReturnToStopwatch">Save Another Time</string>
    <string name="title_activity_show_data">ShowData</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_coach_stopwatch">coachStopwatch</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="onePlayerButton">One Player</string>
    <string name="multiPlayerButton">Multi Players</string>
    <string name="choose_type_of_stopwatch">Choose Type of Stopwatch</string>
    <string name="playerTextBox">Player</string>
    <string name="onePlayerSW">onePlayer</string>
    <string name="multiPlayerSW">multiPlayer</string>
    <string-array name="sports">
        <item>Soccer</item>
        <item>GAA Football</item>
        <item>GAA Hurling</item>
        <item>Rugby</item>
    </string-array>
    <string-array name="dataentry">
        <item>Goals scored</item>
        <item>Assists</item>
        <item>Tackles</item>
        <item>Passes</item>
    </string-array>
    <string name="chooseclubtext">Choose Club</string>
    <string name="submitclubchoice">Submit</string>
    <string name="registerclub">Club not listed?</string>
    <string name="gotoregisterclub">Register Here</string>
    <string name="choose_team">Choose Team</string>
    <string name="coach_overview">Coach Overview</string>
    <string name="my_teams">My Teams</string>
    <string name="click_here_to_create_team">Click Here to Create Team</string>
    <string name="player_home">Player Home</string>
    <string name="gotoregisterteam">Register Here</string>
    <string name="registerTeamText">Team not Listed?</string>
    <string name="newTeamName">New Team Name</string>
    <string name="userTeamsSpinner">TextView</string>
    <string name="createClubButton">Create Club</string>
    <string name="onClickCreateTeam">Create Team</string>
    <string name="sportSpinnerRegister">SportSpinner</string>
    <string name="goToTeamPage">Go To Team Page</string>
    <string name="no_of_players">No of players</string>
    <string name="multiSWTextBox">Choose the no. of players and distance you wish to record</string>
    <string name="goToMultiStopwatch">Go To Stopwatch</string>
    <string name="stop_multiSW">Stop</string>
    <string name="start_the_timer">Start the Timer</string>
    <string name="cancel_the_timer">Cancel The timer</string>
    <string name="restart_all">Restart all</string>
    <string name="save_results">save Results</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
</resources>
