<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="144dp"
        android:onClick="onClickStart"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/stop_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopwatch_Timer" />

    <Button
        android:id="@+id/stop_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:onClick="onClickStop"
        android:text="@string/stop"
        app:layout_constraintEnd_toStartOf="@+id/reset_Button"
        app:layout_constraintStart_toEndOf="@+id/start_Button"
        app:layout_constraintTop_toBottomOf="@+id/stopwatch_Timer" />

    <Button
        android:id="@+id/reset_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:onClick="onClickReset"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop_Button"
        app:layout_constraintTop_toBottomOf="@+id/stopwatch_Timer" />

    <TextView
        android:id="@+id/stopwatch_Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="207dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="100dp"
        android:text="@string/_00_00_000"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="" />
</android.support.constraint.ConstraintLayout>
