<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitegradiant"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/start_Button"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:onClick="onClickStart"
        android:text="@string/start"
        app:layout_constraintBaseline_toBaselineOf="@+id/stop_Button"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/stop_Button"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickStop"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@+id/reset_Button"
        app:layout_constraintStart_toStartOf="@+id/start_Button"
        app:layout_constraintTop_toTopOf="@+id/reset_Button" />

    <Button
        android:id="@+id/reset_Button"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="71dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:onClick="onClickReset"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/distanceDropDown"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stopwatch_Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/_00_00_000"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="" />

    <Spinner
        android:id="@+id/distanceDropDown"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="184dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distanceTextBox" />

    <TextView
        android:id="@+id/distanceTextBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="38dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="38dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/distanceText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/distanceDropDown"
        app:layout_constraintEnd_toStartOf="@+id/distanceDropDown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/distanceDropDown" />

    <Button
        android:id="@+id/save_Button"
        style="@style/MyButtonStyle"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:onClick="onClickSave"
        android:text="@string/SaveTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceTextBox"
        tools:text="Save Time" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/stopwatch_Timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swiftfinallogo" />

</android.support.constraint.ConstraintLayout>
