<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.swiftapp.practiceattemptswiftapp.CoachStopwatch">


    <Button
        android:id="@+id/multiPlayer"
        android:layout_width="192dp"
        android:layout_height="108dp"
        android:layout_marginBottom="122dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="71dp"
        android:onClick="onClickMulti"
        android:text="@string/multiPlayerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onePlayer" />

    <Button
        android:id="@+id/onePlayer"
        android:layout_width="192dp"
        android:layout_height="108dp"
        android:layout_marginBottom="71dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="122dp"
        android:onClick="onClickOne"
        android:text="@string/onePlayerButton"
        app:layout_constraintBottom_toTopOf="@+id/multiPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="189dp"
        android:layout_height="67dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="32dp"
        android:text="@string/choose_type_of_stopwatch"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
