<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitegradiant"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:ems="10"
        android:text="@string/distance_Text"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/distanceText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="149dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:ems="10"
        android:text="@string/time_Text"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/returnToStopwatch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeText"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/returnToStopwatch"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="177dp"
        android:onClick="returnToStopwatch"
        android:text="@string/ReturnToStopwatch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceText" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="237dp"
        android:layout_height="0dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/timeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swiftfinallogo" />

</android.support.constraint.ConstraintLayout>
