<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerTeamJoin">

    <Spinner
        android:id="@+id/chooseClubSpinner"
        android:layout_width="274dp"
        android:layout_height="58dp"
        android:layout_marginEnd="69dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseClubText" />

    <Spinner
        android:id="@+id/chooseTeamSpinner"
        android:layout_width="274dp"
        android:layout_height="58dp"
        android:layout_marginEnd="69dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTeamText" />

    <TextView
        android:id="@+id/chooseClubText"
        android:layout_width="195dp"
        android:layout_height="53dp"
        android:layout_marginEnd="108dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="34dp"
        android:text="@string/chooseclubtext"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chooseTeamText"
        android:layout_width="195dp"
        android:layout_height="53dp"
        android:layout_marginEnd="108dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="180dp"
        android:text="@string/choose_team"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitClubChoice"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="117dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:onClick="onPlayerRegTeam"
        android:text="@string/submitclubchoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTeamSpinner" />

</android.support.constraint.ConstraintLayout>